[sidebar-fixed] Fixed identation; Used same style for icons; Aligned sidebar collapse button with header text; Created 'boards-array.ts' to store board id and name. The sidebar component now displays the data from the array with 'board-btn' component; Removed footer; Further adjustments for styling: spacing, button colors, etc..

--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -1,13 +1,13 @@
 .sidebar-hidden {
+  font-size: 18px;
   background: none;
   border: none;
   margin-top: 1px;
-  padding-top: 2rem;
+  padding-top: 2.5rem;
   height: 100vh;
   width: 30px;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: flex-start;
   &:hover {
     transition: ease 0.2s;
@@ -16,27 +16,28 @@
   }
 }
 .sidebar {
-  position: sticky;
   margin-top: 1px;
   width: 20%;
   height: 100vh;
   box-shadow: 0px 0px 0px 1px #ccc;
   header {
     position: relative;
-    box-shadow: 0px 0px -1px 1px #ccc;
+    display: flex;
+    justify-content: space-between;
+    box-shadow: 0px 0px 0px 1px #ccc;
     padding: 1rem;
     .sidebar-close-btn {
       font-size: 18px;
-      float: right;
       border-radius: 5px;
-      padding: 0px 5px;
+      padding: 0px 10px;
+      margin-top: 10px;
+      margin-bottom: 10px;
       border: none;
       background: none;
       &:hover {
         transition: ease 0.2s;
         cursor: pointer;
         background-color: #ff000015;
-        box-shadow: 0px 0px 0px 1px #ff000038;
         color: #ff0000b5;
       }
       .pi-angle-double-left {
@@ -46,35 +47,14 @@
   }
   .sidebar-content {
     overflow-y: auto;
-    height: 70%;
-    box-shadow: 0px 0px 0px 1px #ccc;
+    height: 70vh;
   }
   ul {
     padding-left: 0;
     list-style-type: none;
     .sidebar-item {
-      padding: 1rem;
-      .sidebar-item-btn {
-        color: #003767;
-        background-color: #2f79ba19;
-        padding: 20px 40px;
-        text-align: left;
-        border: none;
-        width: 100%;
-        border-radius: 5px;
-        &:hover {
-          cursor: pointer;
-          transition: ease 0.2s;
-          background-color: #245b8b2d;
-          box-shadow: inset 0px 0px 0px 1px #2f79ba6d;
-        }
-      }
+      padding: 0.5rem;
     }
-  }
-  .sidebar-bottom {
-    font-size: x-small;
-    padding: 1rem;
-    opacity: 30%;
   }
 }
 
