--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,16 +1,7 @@
 @import '../node_modules/primeicons/primeicons.css';
 
-* {
-  box-sizing: border-box;
-}
-
-html {
-  height: 100%;
-}
-
 body {
-  overflow: hidden;
   font-family: 'Poppins', sans-serif;
+  overflow: hidden;
   margin: auto;
-  height: 100%;
 }
